# ts-aot

./: .gitignore  Cargo.toml  justfile
crates/ts-aot-backend/: Cargo.toml
crates/ts-aot-backend/src/: emit_decl.rs  error.rs  lib.rs  tests.rs
crates/ts-aot-backend/src/emit_decl/: body.rs  ctx.rs  ident.rs  literals.rs  mod.rs  tests.rs  types.rs
crates/ts-aot-backend/tests/: literal_edge_cases.rs
crates/ts-aot-core/: Cargo.toml
crates/ts-aot-core/src/: ids.rs  lib.rs  ty.rs  type_table.rs
crates/ts-aot-core/tests/: type_table.rs
crates/ts-aot-driver/: Cargo.toml
crates/ts-aot-driver/src/: cli.rs  lib.rs  main.rs  pipeline.rs  tests.rs
crates/ts-aot-driver/tests/: generators.rs
crates/ts-aot-frontend/: Cargo.toml
crates/ts-aot-frontend/src/: body.rs  decl.rs  dump.rs  expr.rs  frontend.rs  lib.rs  module.rs  ops.rs  scope.rs  semantic_analyze.rs  skeleton.rs  stmt.rs  type_resolver.rs  util.rs  walker_tests.rs
crates/ts-aot-frontend/src/frontend/: decl.rs  mod.rs  module.rs  skeleton.rs  tests.rs  util.rs
crates/ts-aot-frontend/src/frontend/body/: expr.rs  mod.rs  ops.rs  scope.rs  stmt.rs
crates/ts-aot-frontend/src/type_resolver/: aggregate.rs  conditional.rs  function.rs  mapped.rs  mod.rs  reference.rs
crates/ts-aot-ir-hir/src/: decl.rs  expr.rs  lib.rs  program.rs  stmt.rs
crates/ts-aot-ir-hir/src/dump/: decl.rs  expr.rs  mod.rs
crates/ts-aot-ir-mir/src/: decl.rs  lib.rs  program.rs  runtime.rs
crates/ts-aot-ir-mir/src/body/: mod.rs  tests.rs
crates/ts-aot-ir-mir/src/dump/: expr.rs  mod.rs
crates/ts-aot-passes/: Cargo.toml
crates/ts-aot-passes/src/: context.rs  error.rs  lib.rs  lower_async.rs  lower_enums.rs  lower_generators.rs  lower_result.rs  source_map.rs
crates/ts-aot-passes/src/hir_to_mir/: convert_expr.rs  convert_stmt.rs  converter.rs  mod.rs  ops.rs  program.rs  tests.rs
crates/ts-aot-passes/src/hir_to_mir/convert_expr/: mod.rs  place.rs  util.rs
crates/ts-aot-passes/src/lower_async/: expr.rs  mod.rs  tests.rs  walk_stmt.rs
crates/ts-aot-passes/src/lower_classes/: mod.rs  tests.rs
crates/ts-aot-passes/src/lower_closures/: closure_lift.rs  rewrite.rs  tests.rs  walk_expr.rs
crates/ts-aot-passes/src/lower_enums/: expr.rs  mod.rs  tests.rs  walk.rs
crates/ts-aot-passes/src/lower_result/: mod.rs  tests.rs
crates/ts-aot-passes/src/monomorphize/: core.rs  infer.rs  infer_tests.rs  mod.rs  substitute.rs  substitute_decl.rs  substitute_expr.rs  substitute_stmt.rs  substitute_ty.rs  tests.rs
crates/ts-aot-passes/tests/: async_lower.rs  bigint_literal.rs  closures.rs  convert_basic.rs  dynamic_field.rs  dynamic_import.rs  enums.rs  indirect_call.rs  lower_generators.rs  object_builtins.rs  optional_chain.rs  pipe.rs  regexp_literal.rs  result.rs  template_strings_edge.rs  type_ops.rs
crates/ts-aot-runtime/: Cargo.toml
crates/ts-aot-runtime/src/: lib.rs  runtime_source.rs  tests.rs
crates/ts-aot-runtime/tests/: bigint_handle.rs  dynamic_import.rs  generator.rs  promise.rs  regex_handle.rs  runtime_basics.rs  template_strings_array_index.rs
crates/ts2zig-core/src/: ids.rs  interner.rs  lib.rs  string_table.rs  symbol_table.rs  ty.rs  type_table.rs
crates/ts2zig-core/tests/: type_table.rs
crates/ts2zig-ir-hir/src/: decl.rs  expr.rs  program.rs  stmt.rs
crates/ts2zig-ir-mir/: Cargo.toml
crates/ts2zig-ir-mir/src/: decl.rs  lib.rs  program.rs
crates/ts2zig-ir-mir/src/body/: mod.rs
crates/ts2zig-ir-mir/src/dump/: mod.rs
crates/ts2zig-passes/src/: error.rs  lower_async.rs  lower_enums.rs  lower_result.rs
crates/ts2zig-passes/src/hir_to_mir/: convert_expr.rs  convert_stmt.rs  converter.rs  program.rs  tests.rs
crates/ts2zig-passes/tests/: pipe.rs
test_set_compile/: main.rs
tests/: test262_harness.py
