[workspace]
resolver = "2"
members = [
    "crates/ts-aot-core",
    "crates/ts-aot-frontend",
    "crates/ts-aot-ir-hir",
    "crates/ts-aot-ir-mir",
    "crates/ts-aot-passes",
    "crates/ts-aot-backend",
    "crates/ts-aot-runtime",
    "crates/ts-aot-driver",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/ts-aot"
publish = false

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
oxc_allocator = "0.139"
oxc_ast = "0.139"
oxc_diagnostics = "0.139"
oxc-miette = "3"
oxc_parser = "0.139"
oxc_semantic = "0.139"
oxc_span = "0.139"
oxc_str = "0.139"
oxc_syntax = "0.139"
proptest = "1"
proc-macro2 = "1"
quote = "1"

[profile.release]
lto = "thin"
codegen-units = 1
