[package]
name = "ts-aot-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "ts-aot driver: CLI binary and library API for compiling TypeScript to Rust"

[[bin]]
name = "ts-aot"
path = "src/main.rs"

[dependencies]
ts-aot-backend = { path = "../ts-aot-backend" }
ts-aot-core = { path = "../ts-aot-core" }
ts-aot-frontend = { path = "../ts-aot-frontend" }
ts-aot-ir-hir = { path = "../ts-aot-ir-hir" }
ts-aot-ir-mir = { path = "../ts-aot-ir-mir" }
ts-aot-passes = { path = "../ts-aot-passes" }

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
